# context-mesh-foundry

./: .coverage  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh.md  SECURITY.md  coverage.xml  pyproject.toml  requirements-dev.txt
.claude/: CLAUDE.md
.github/: CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: codeql.yml  release.yml  sync-labels.yml  verify.yml
artifacts/autoresearch/: contextgo_autoresearch.tsv  contextgo_autoresearch_best.json  contextgo_autoresearch_latest.json  contextgo_autoresearch_metrics.json
artifacts/testsets/: dataset_2026-03-25.json  qa_report_2026-03-25.md
benchmarks/: README.md  __init__.py  run.py  session_index_benchmark.py
docs/: API.md  ARCHITECTURE.md  AUDIT_10_ROUNDS.md  CONFIGURATION.md  FAQ.md  LAUNCH_COPY.md  MEDIA_GUIDE.md  MIGRATION.md  QA_REPORT_2026-03-05_1dot000.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_0.11.2.md  RELEASE_NOTES_0.12.2.md  RELEASE_NOTES_0.12.4.md  RELEASE_NOTES_0.5.0.md  RELEASE_NOTES_0.6.1.md  RELEASE_NOTES_0.7.0.md  RELEASE_NOTES_0.9.0.md  SHELL_COMPLETION.md  TROUBLESHOOTING.md  index.md
docs/archive/release-notes/: RELEASE_NOTES_0.10.0.md  RELEASE_NOTES_0.11.0.md  RELEASE_NOTES_0.11.1.md  RELEASE_NOTES_0.11.3.md  RELEASE_NOTES_0.11.4.md  RELEASE_NOTES_0.6.1.md  RELEASE_NOTES_0.9.35.md
docs/skills/contextgo-gsd/: SKILL.md
docs/skills/contextgo-recall/: SKILL.md
examples/: contextgo.config.template.json
integrations/gsd/workflows/: health.md
native/: README.md
native/session_scan/: Cargo.toml  README.md
native/session_scan/src/: main.rs
native/session_scan_go/: go.mod  main.go  mmap_unix.go  mmap_windows.go  scanner.go  scanner_test.go  session_scan_go
patches/: README.md
scripts/: apply_context_first_policy.sh  auto_update.sh  autoresearch_contextgo.py  check_noise_sync.py  context_cli.py  context_config.py  context_core.py  context_daemon.py  context_healthcheck.sh  context_maintenance.py  context_native.py  context_server.py  context_smoke.py  e2e_quality_gate.py  export_memories.py  import_memories.py  memory_hit_first_regression.py  memory_index.py  memory_viewer.py  onecontext_maintenance.py  openviking_mcp.py  run_contextgo_maintenance.sh  run_onecontext_maintenance.sh  scf_context_prewarm.sh  session_index.py  shell_integration.sh  smoke_installed_cli.py  smoke_installed_runtime.py  source_adapters.py  sqlite_retry.py  start_memory_viewer.sh  test_autoresearch_contextgo.py  test_concurrent_safety_r26.py  test_context_cli.py  test_context_cli_r11.py  test_context_cli_r25.py  test_context_cli_r26.py  test_context_cli_r34.py  test_context_config.py  test_context_core.py  (+27 more)
skills/: install.sh
skills/contextgo-gsd/: SKILL.md
skills/contextgo-recall/: SKILL.md
skills/contextgo-save/: SKILL.md
src/artifacts/autoresearch/: contextgo_autoresearch_best.json  contextgo_autoresearch_metrics.json
src/contextgo/: __init__.py  autoresearch_contextgo.py  context_cli.py  context_config.py  context_core.py  context_daemon.py  context_maintenance.py  context_native.py  context_prewarm.py  context_smoke.py  export_memories.py  import_memories.py  memory_hit_first_regression.py  memory_index.py  memory_viewer.py  secret_redaction.py  session_index.py  smoke_installed_cli.py  smoke_installed_runtime.py  source_adapters.py  sqlite_retry.py  vector_index.py
templates/launchd/: com.context.healthcheck.plist  com.contextgo.auto-update.plist  com.contextgo.daemon.plist  com.contextgo.healthcheck.plist  com.contextmesh.daemon.plist  com.contextmesh.healthcheck.plist  com.openviking.daemon.plist
templates/systemd-user/: context-healthcheck.service  context-healthcheck.timer  contextgo-daemon.service  contextmesh-daemon.service  openviking-server.service  viking-daemon.service
tests/: conftest.py  test_autoresearch_contextgo.py  test_check_noise_sync.py  test_context_cli.py  test_context_cli_r11.py  test_context_cli_r25.py  test_context_cli_r34.py  test_context_config.py  test_context_core.py  test_context_core_extended.py  test_context_daemon.py  test_context_daemon_extended.py  test_context_daemon_r22.py  test_context_daemon_r31.py  test_context_daemon_r36.py  test_context_maintenance.py  test_context_native_extended.py  test_context_prewarm.py  test_context_server.py  test_context_smoke.py  test_coverage_boost_r10.py  test_coverage_boost_r41.py  test_coverage_v0114.py  test_memory_index_r11.py  test_memory_index_r35.py  test_memory_viewer.py  test_misc_coverage_r40.py  test_package_init.py  test_r1_batch1.py  test_r1_batch2.py  test_session_index.py  test_session_index_r11.py  test_source_adapters.py  test_sqlite_retry.py  test_utility_scripts.py  test_vector_index.py  test_viewer_native_r39.py
tests/regression/: test_context_cli_r25.py  test_context_cli_r34.py  test_context_daemon_r31.py
