[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------

[project]
name = "contextgo"
dynamic = ["version"]
description = "Local-first context & memory runtime for multi-agent AI coding teams"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Dunova", email = "contact@dunova.io" },
]
maintainers = [
    { name = "Dunova", email = "contact@dunova.io" },
]
keywords = [
    "ai",
    "context",
    "memory",
    "local-first",
    "developer-tools",
    "multi-agent",
    "llm",
    "coding-assistant",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
    "Typing :: Typed",
]

# Core runtime has zero mandatory third-party dependencies.
# httpx is available as an optional extra for remote sync paths.
dependencies = []

[project.optional-dependencies]
remote = ["httpx>=0.27"]
vector = ["model2vec>=0.4.0", "bm25s>=0.2.0", "numpy>=1.24"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff==0.15.7",
    "bandit>=1.8",
    "safety>=3.3",
    "mypy>=1.10",
]
all = ["contextgo[remote,vector,dev]"]

[project.scripts]
contextgo = "contextgo.context_cli:main"

[project.urls]
Homepage = "https://github.com/dunova/ContextGO"
Documentation = "https://github.com/dunova/ContextGO/tree/main/docs"
Repository = "https://github.com/dunova/ContextGO"
"Bug Tracker" = "https://github.com/dunova/ContextGO/issues"
Changelog = "https://github.com/dunova/ContextGO/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Hatch — version and build
# ---------------------------------------------------------------------------

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+.*)"

[tool.hatch.build.targets.wheel]
packages = ["src/contextgo"]
exclude = [
    "scripts/*.sh",
    "coverage.xml",
]

[tool.hatch.build.targets.wheel.force-include]
"config/noise_markers.json" = "config/noise_markers.json"
"scripts" = "scripts"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/scripts",
    "/config",
    "/docs",
    "/templates",
    "/VERSION",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
]

# ---------------------------------------------------------------------------
# Ruff — linter and formatter
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "PIE", "RET", "TID"]
ignore = [
    "E501",   # line length — enforced via formatter, not linter
]
unfixable = ["B"]  # keep B-violations visible; fix manually

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = ["SIM117", "SIM105", "E741", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["contextgo"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--cov=src/contextgo",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=97",
    "-v",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------

[tool.coverage.run]
source = ["src/contextgo"]
omit = ["tests/test_*.py", "tests/*_test.py"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

# ---------------------------------------------------------------------------
# Bandit — security scanner
# ---------------------------------------------------------------------------

[tool.bandit]
exclude_dirs = ["scripts/test_*.py"]
skips = ["B101"]  # assert used in tests and retry helpers

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
