[package]
name = "session_scan"
version = "0.2.0"
edition = "2021"
description = "High-performance scanner for Codex/Claude session files with structured JSON output."
license = "MIT OR Apache-2.0"
repository = "https://github.com/contextgo/contextgo"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "2"
walkdir = "2"
